--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -123,6 +123,7 @@
   ansible_become_pass: "hallowelt"
   ### SSH
   ansible_ssh_common_args: "'-o StrictHostKeyChecking=no'"
+  host_key_checking: False
 
   # Ansible Plugin Variablen
   ### Keepass
