--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # ansible
-./ansible/vault-pass.yml
+./ansible/kennwoerter.md
+./ansible/ansible_private_key
+
+
 
 # Created by https://www.gitignore.io/api/archive,diskimage,executable
 # Edit at https://www.gitignore.io/?templates=archive,diskimage,executable
