--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # ansible
 ansible/kennwoerter.md
 ansible/ansible_private_key
+ansible/private_key_mg
+ansible/public_key_mg
+ansible/private_key_mg_putty.ppk
 
 
 
