--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -16,10 +16,10 @@
           ws-ubuntu8.grote.lan:
           ws-ubuntu9.grote.lan:
           ws-ubuntu10.grote.lan:
-      
-      netzwerkverwalter:
+
+      dhcp:
         hosts:
-          ws-ubuntu1.grote.lan:
+          192.168.178.3:
 
       ansible:
         hosts:
