--- a/ansible/roles/dhcp_server_einrichten/defaults/main.yml
+++ b/ansible/roles/dhcp_server_einrichten/defaults/main.yml
@@ -1,5 +1,7 @@
-dnsmasq_netid: "192.168.2."
-dnsmasq_firstclient: "222"
-dnsmasq_lastclient: "240"
-dnsmasq_leasetime: "12h"
-server_bereich: "server"
+---
+  dhcp_ranges: # welche ranges sollen gesetzt werden
+    - rangename: "server"
+      netaddress: "192.168.178."
+      firsthostaddress: "5"
+      lasthostadrdess: "10"
+      leasetime: "12h"
