--- a/ansible/group_vars/dhcp.yml
+++ b/ansible/group_vars/dhcp.yml
@@ -5,3 +5,18 @@
       firsthostaddress: "5"
       lasthostadrdess: "10"
       leasetime: "12h"
+  ### oefenweb.ufw
+  ufw_rules:
+    - rule: allow
+      to_port: 22
+      protocol: tcp
+      comment: 'ssh'
+    - rule: allow
+      to_port: 53
+      comment: 'dns'
+    - rule: allow
+      to_port: 67
+      comment: 'dhcp'
+    - rule: allow
+      to_port: 68
+      comment: 'dhcp'
