Kennwörter + SSH-Keys (#68)
* ansible_private_keyfile verschlüsselt mit ansible_vault. selbes kw wie f ur keepass Pw

* host_key_checking deaktivert

* gitignore angepasst

* gitognore pfade angepasst

* gitignore für mg angepasst

* ansible_private_key wieder klartext

* typo in ssh_key

* private_key gelöscht

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # ansible
-./ansible/vault-pass.yml
+ansible/kennwoerter.md
+ansible/ansible_private_key
+ansible/private_key_mg
+ansible/public_key_mg
+ansible/private_key_mg_putty.ppk
+
+
 
 # Created by https://www.gitignore.io/api/archive,diskimage,executable
 # Edit at https://www.gitignore.io/?templates=archive,diskimage,executable
