--- a/ansible/group_vars/dhcp.yml
+++ b/ansible/group_vars/dhcp.yml
@@ -1,4 +1,5 @@
 ---
+  ### dhcp-server einrichten
   dhcp_ranges: # welche ranges sollen gesetzt werden
     - rangename: "server"
       netaddress: "192.168.178."
