--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -39,7 +39,7 @@
   ntp_server_daemon_user: ntp # Nutzer + Gruppe für den Dienst
   ntp_server_daemon_group: ntp # Nutzer + Gruppe für den Dienst
   ### mgrote.set_apt_sources
-  acng_server: ws-ubuntu4.grote.lan
+  acng_server: 11.10.31.220
   acng_server_port: 9999
   ### dhcp_server_einrichten
   dhcp-dns-ipaddress: "11.10.31.10"
