--- a/ansible/roles/dhcp_server_einrichten/templates/dnsmasq.conf
+++ b/ansible/roles/dhcp_server_einrichten/templates/dnsmasq.conf
@@ -6,3 +6,6 @@
 {% for item in dhcp_ranges %}
 dhcp-range=set:{{ item.rangename }},{{ item.netaddress }}{{ item.firsthostaddress }},{{ item.netaddress }}{{ item.lasthostadrdess }},{{ item.leasetime }}
 {% endfor %}
+
+listen-address=127.0.0.1
+listen-address= {{ ipadress }}
