--- a/ansible/roles/dhcp_server_einrichten/templates/dnsmasq.conf
+++ b/ansible/roles/dhcp_server_einrichten/templates/dnsmasq.conf
@@ -8,4 +8,4 @@ dhcp-range=set:{{ item.rangename }},{{ item.netaddress }}{{ item.firsthostaddres
 {% endfor %}
 
 listen-address=127.0.0.1
-listen-address= {{ ipadress }}
+listen-address= {{ ipaddress }}
