--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -41,8 +41,8 @@
   ### mgrote.set_apt_sources
   acng_server: ws-ubuntu4.grote.lan
   acng_server_port: 9999
-  ### dnsmasq-server
-  dhcp-dns-ipadress: "11.10.31.10"
+  ### dhcp_server_einrichten
+  dhcp-dns-ipaddress: "11.10.31.10"
   dhcp_ranges: # welche ranges  gesetzt werden
     - rangename: "server"
       netaddress: "11.10.31."
