--- a/ansible/roles/dhcp_server_einrichten/templates/dnsmasq.conf
+++ b/ansible/roles/dhcp_server_einrichten/templates/dnsmasq.conf
@@ -4,5 +4,8 @@
 #Beispiele der dnsmasq.conf liegen in der dnsmasqconf.examples
 
 {% for item in dhcp_ranges %}
-dhcp-range=set:{{ item.rangename }},{{ item.netaddress }}{{ item.firsthostaddress }},{{ item.netaddress }}{{ item.lasthostadrdess }},{{ item.leasetime }}
+dhcp-range=set:{{ item.rangename }},{{ item.netaddress }}{{ item.firsthostaddress }},{{ item.netaddress }}{{ item.lasthostaddress }},{{ item.leasetime }}
 {% endfor %}
+
+listen-address=127.0.0.1
+listen-address= {{ ipaddress }}
