--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -41,6 +41,21 @@
   ### mgrote.set_apt_sources
   acng_server: ws-ubuntu4.grote.lan
   acng_server_port: 9999
+  ### dhcp_server_einrichten
+  dhcp-dns-ipaddress: "11.10.31.10"
+  dhcp_ranges: # welche ranges  gesetzt werden
+    - rangename: "server"
+      netaddress: "11.10.31."
+      firsthostaddress: "6"
+      lasthostaddress: "50"
+      leasetime: "12h"
+      # erst nach ersten test auskommentieren
+      # (keine ahnung wie das verhalten bei zwei dhcp ranges im selben subnetz ist)
+#    - rangename: "clients"
+#      netaddress: "11.10.31."
+#      firsthostaddress: "51"
+#      lasthostaddress: "200"
+#      leasetime: "12h"
   ### robertdebock.bootstrap
   users:
     - username: mg
