kati als bottstrap user

--- a/ansible/playbooks/0_bootstrap.yml
+++ b/ansible/playbooks/0_bootstrap.yml
@@ -16,7 +16,7 @@
 
     vars:
       ### reobertdebock.bootstrap
-      bootstrap_user: mg
+      bootstrap_user: kati
       bootstrap_wait_for_host: no
       bootstrap_timeout: 1
       ### ansible
