--- a/ansible/playbooks/0_bootstrap.yml
+++ b/ansible/playbooks/0_bootstrap.yml
@@ -20,7 +20,7 @@
       bootstrap_wait_for_host: no
       bootstrap_timeout: 1
       ### ansible
-      ansible_user: "mg"
+      ansible_user: "kati"
       ansible_password: hallowelt
       ansible_become_password: hallowelt
       ansible_ssh_common_args: "'-o StrictHostKeyChecking=no'"
