"Bugfix": set_apt_proxy

--- a/ansible/roles/set_apt_proxy/tasks/main.yml
+++ b/ansible/roles/set_apt_proxy/tasks/main.yml
@@ -2,6 +2,6 @@
   - name: proxy setzen
     become: yes
     ansible.builtin.lineinfile:
-      path: /etc/apt/apt.conf.d/proxy.conf
+      path: /etc/apt/apt.conf
       line: Acquire::http::proxy "http://{{ server }}:{{ port }}";
       state: present
