--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -13,8 +13,12 @@
             ansible_host: 11.10.31.220
           ansible:
             ansible_host: 11.10.31.221
+          dnsmasq:
+            ansible_host: 11.10.31.10
       dhcp:
         hosts:
+          dnsmasq:
+            ansible_host: 11.10.31.10
       ansible:
         hosts:
           ansible:
