setting timeout --- da ansible beim ausführen des scripts in ein timeout gelaufen ist musste ich von default 12s auf 30s erhöhen. siehe: https://github.com/DanielMueller1309/ansible/wiki/Timeout-(12s)-waiting-for-privilege-escalation-prompt

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -5,6 +5,8 @@ roles_path            = ./roles
 lookup_plugins        = ./plugins/lookup
 collections_paths     = ./ansible_collections
 private_key_file      = ./ansible_private_key
+timeout=30
+
 [inventory]
 
 [privilege_escalation]
