--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -42,7 +42,7 @@
   acng_server: 11.10.31.220
   acng_server_port: 9999
   ### dhcp_server_einrichten
-  dhcp-dns-ipaddress: "11.10.31.10"
+  dhcp_dns_ipaddress: "11.10.31.10"
   dhcp_ranges: # welche ranges  gesetzt werden
     - rangename: "server"
       netaddress: "11.10.31."
