--- a/ansible/roles/dnsmasq_server_einrichten/defaults/main.yml
+++ b/ansible/roles/dnsmasq_server_einrichten/defaults/main.yml
@@ -5,4 +5,4 @@
       firsthostaddress: "5"
       lasthostadrdess: "10"
       leasetime: "12h"
-  dhcp-dns-ipaddress: "11.10.31.10"
+  dhcp_dns_ipaddress: "11.10.31.10"
