--- a/ansible/roles/dnsmasq_server_einrichten/defaults/main.yml
+++ b/ansible/roles/dnsmasq_server_einrichten/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
   dhcp_ranges: # welche ranges sollen gesetzt werden
-    - rangename: "server"
-      netaddress: "192.168.178."
-      firsthostaddress: "5"
-      lasthostadrdess: "10"
-      leasetime: "12h"
-  dhcp_dns_ipaddress: "11.10.31.10"
+    - rangename: "server" # Name der Range, zum beispiel für Server und Clients getrente Ranges oder wenn der DHCP-Server Ranges in verschiedenen subnetzten verteilt.
+      netaddress: "192.168.178." # Netzwerkadresse der Range, der Punkt am ende des Strings ist entscheident da mit der ersten und letzten Hostadresse zusammen eine IP gebildet wird (Beispiel: {{ netaddress }}{{ firsthostaddress }} -> 192.168.178.5)
+      firsthostaddress: "5" # erster vergebener Host in der Range
+      lasthostadrdess: "10" # letzter vergebener Host in der Range
+      leasetime: "12h" # Leasetime, zum Beispiel 12h für 12 Stunden oder 3m für 3 Minuten
+  dhcp_dns_ipaddress: "11.10.31.10" # Adresse des dnsmasq servers
