--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -15,7 +15,7 @@
             ansible_host: 11.10.31.221
           h_dnsmasq:
             ansible_host: 11.10.31.10
-      g_dhcp:
+      g_dnsmasq:
         hosts:
           h_dnsmasq:
             ansible_host: 11.10.31.10
