add gateway and ntp

--- a/ansible/roles/dnsmasq_server_einrichten/templates/dnsmasq.conf
+++ b/ansible/roles/dnsmasq_server_einrichten/templates/dnsmasq.conf
@@ -9,3 +9,7 @@ dhcp-range=set:{{ item.rangename }},{{ item.netaddress }}{{ item.firsthostaddres
 
 listen-address=127.0.0.1
 listen-address={{ dhcp_dns_ipaddress }}
+
+
+dhcp-option=3,{{ gateway_server }}
+dhcp-option=42,{{ ntp_server }}   # Timeserver Ingo
