--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -28,6 +28,8 @@
   acng_server_port: 9999
   ### dhcp_server_einrichten
   dhcp_dns_ipaddress: "11.10.31.10"
+  gateway: 11.10.31.254
+  ntp_server: 11.8.43.1
   dhcp_ranges: # welche ranges  gesetzt werden
     - rangename: "server"
       netaddress: "11.10.31."
