--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -28,8 +28,8 @@ jobs:
         # Arguments to override a package and its version to be set explicitly.
         # Must follow the example syntax.
         override-deps: |
-          ansible==2.10
-          ansible-lint==4.3.5
+          ansible
+          ansible-lint
         # [optional]
         # Arguments to be passed to the ansible-lint
 
