GitHub-Action: ansible-lint: stage umbenannt

--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -3,7 +3,7 @@ name: Ansible Lint  # feel free to pick your own name
 on: [pull_request]
 
 jobs:
-  build:
+  lint:
 
     runs-on: ubuntu-latest
 
