dns und dhcp var getrennt

--- a/ansible/roles/dnsmasq_server_einrichten/defaults/main.yml
+++ b/ansible/roles/dnsmasq_server_einrichten/defaults/main.yml
@@ -5,6 +5,7 @@
       firsthostaddress: "5" # erster vergebener Host in der Range
       lasthostadrdess: "10" # letzter vergebener Host in der Range
       leasetime: "12h" # Leasetime, zum Beispiel 12h für 12 Stunden oder 3m für 3 Minuten
-  dhcp_dns_ipaddress: "11.10.31.10" # Adresse des dnsmasq servers
+  dhcp_ipaddress: "11.10.31.10" # Adresse des dhcp servers
+  dns_ipaddress: "11.10.31.10" # Adresse des dns servers
   gateway: 11.10.31.254
   ntp_server: 11.8.43.1
