--- a/ansible/roles/dnsmasq_server_einrichten/templates/dnsmasq.conf
+++ b/ansible/roles/dnsmasq_server_einrichten/templates/dnsmasq.conf
@@ -8,7 +8,7 @@ dhcp-range=set:{{ item.rangename }},{{ item.netaddress }}{{ item.firsthostaddres
 {% endfor %}
 
 listen-address=127.0.0.1
-listen-address={{ dhcp_dns_ipaddress }}
+listen-address={{ dhcp_ipaddress }}
 
 
 dhcp-option=3,{{ gateway_server }}
