--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -27,7 +27,8 @@
   acng_server: 11.10.31.220
   acng_server_port: 9999
   ### dhcp_server_einrichten
-  dhcp_dns_ipaddress: "11.10.31.10"
+  dhcp_ipaddress: "11.10.31.10"
+  dns_ipaddress: "11.10.31.10"
   gateway: 11.10.31.254
   ntp_server: 11.8.43.1
   dhcp_ranges: # welche ranges  gesetzt werden
