--- a/ansible/playbooks/2_sources.yml
+++ b/ansible/playbooks/2_sources.yml
@@ -1,4 +1,4 @@
 ---
-  - hosts: all:!acng
+  - hosts: all:!g_acng
     roles:
 #      - { role: mgrote.set_apt_sources, tags: "sources", become: yes}
