add präfix to template

--- a/ansible/roles/danielmueller1309.dnsmasq_server_einrichten/templates/dnsmasq.conf
+++ b/ansible/roles/danielmueller1309.dnsmasq_server_einrichten/templates/dnsmasq.conf
@@ -3,13 +3,13 @@
 
 #Beispiele der dnsmasq.conf liegen in der dnsmasqconf.examples
 
-{% for item in dhcp_ranges %}
+{% for item in dnsmasq_server_einrichten_dhcp_ranges %}
 dhcp-range=set:{{ item.rangename }},{{ item.netaddress }}{{ item.firsthostaddress }},{{ item.netaddress }}{{ item.lasthostaddress }},{{ item.leasetime }}
 {% endfor %}
 
 listen-address=127.0.0.1
-listen-address={{ dhcp_ipaddress }}
+listen-address={{ dnsmasq_server_einrichten_dhcp_ipaddress }}
 
 
-dhcp-option=3,{{ gateway_server }}
+dhcp-option=3,{{ dnsmasq_server_einrichten_gateway_server }}
 dhcp-option=42,{{ ntp_server }}   # Timeserver Ingo
