--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,5 +1,4 @@
 ---
-
   ### oefenweb.ufw
   ufw_rules:
     - rule: allow
@@ -136,7 +135,7 @@
     - cifs-utils
     - netdiscover
     - tree
-    - curl
+    - curl # benötigt für jenkins
     - logrotate
     - ncdu
     - net-tools
@@ -146,6 +145,7 @@
     - vim
     - qemu-guest-agent
     - bmon
+    - sshpass # für ansible
     - tmux
     - sudo
 
