--- a/ansible/group_vars/g_dnsmasq.yml
+++ b/ansible/group_vars/g_dnsmasq.yml
@@ -1,7 +1,7 @@
 ---
   ### mgrote.dnsmasq
-  dnsmasq_resolv_file: /etc/resolv.conf # wo liegt die resolv.conf
-  dnsmasq_extra_resolve_file: /etc/dnsmasq_extra_resolve_file # wo liegen extra hosts/ersatz fur /etc/hosts
+  dnsmasq_resolv_file: "/etc/resolv.conf" # wo liegt die resolv.conf
+  dnsmasq_extra_resolve_file: "/etc/dnsmasq_extra_resolve_file" # wo liegen extra hosts/ersatz fur /etc/hosts
   dnsmasq_packages: # Pakete
     - dnsmasq
     - dnsutils
@@ -14,19 +14,20 @@
   dnsmasq_listen_port: "53" # auf welchem Port soll dnsmasq hören
   dnsmasq_domain: ausbildung.md # wie heißt die lokale domain
   dnsmasq_dhcp_pools: # welche dhcp pools gibt es
-    - ip_start: 11.10.31.220
+    - name: pool1
+      ip_start: 11.10.31.220
       ip_end: 11.10.31.230
       leasetime: "3m"
   dnsmasq_dhcp_static_leases: # statische leases; also max 11:22:33:44:55:66 kriegt immer IP 192.168.0.60 mit dem hostnamen klauspeter
-    - mac: "11:22:33:44:55:66"
+    - name: "klauspeter" # gleichzeitg auch hostname
+      mac: "11:22:33:44:55:66"
       ip: "192.168.0.60"
-      hostname: "klauspeter"
   dnsmasq_dhcp_options: # welche dhcp optionen werden gesetzt
     - name: ntp-server
-      opt_nr: "42"
+      optnr: "42"
       value: "11.8.43.1,11.8.43.2"
     - name: router
-      opt_nr: "3"
+      optnr: "3"
       value: "11.10.31.254"
   dnsmasq_addresses_to_resolve: # namensauflösung für geräte ohne leases
     - shortname: acng
