check config handler

--- a/ansible/roles/mgrote.dnsmasq/handlers/main.yml
+++ b/ansible/roles/mgrote.dnsmasq/handlers/main.yml
@@ -5,3 +5,7 @@
       name: dnsmasq
       enabled: yes
       state: restarted
+
+  - name: check config
+    become: yes
+    ansible.builtin.shell: dnsmasq --test
