--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -17,7 +17,9 @@
   ntp_client_timezone: "Europe/Berlin" #Zeitzone in der sich der Cpmputer befindet
   ntp_client_driftfile_directory: "/var/lib/ntp" # Ordner für das driftfile
   ntp_client_servers: # welche Server sollen befragt werden
-    - address: ws-ubuntu3.grote.lan
+    - address: 11.8.43.1
+      options: iburst #optionaler parameter
+    - address: 11.8.43.2
       options: iburst #optionaler parameter
   ntp_client_daemon_user: ntp # Nutzer + Gruppe für den Dienst
   ntp_client_daemon_group: ntp # Nutzer + Gruppe für den Dienst
