Template acng angepasst, Proxy wird jetzt in acng.conf gesetzt

--- a/ansible/roles/mgrote.acng/templates/acng.conf
+++ b/ansible/roles/mgrote.acng/templates/acng.conf
@@ -46,6 +46,8 @@ Port:{{ acng_server_port }}
 #
 # Proxy: http://www-proxy.example.net:3128
 # Proxy: https://username:proxypassword@proxy.example.net:3129
+Proxy: http://{{ acng_proxy_extern_ip }}:{{ acng_proxy_extern_port }}
+Proxy: https://{{ acng_proxy_extern_ip }}:{{ acng_proxy_extern_port }}
 
 # Repository remapping. See manual for details.
 # In this example, some backends files might be generated during package
