set apt proxy in acng playbook

--- a/ansible/playbooks/install_acng_server.yml
+++ b/ansible/playbooks/install_acng_server.yml
@@ -1,5 +1,5 @@
 ---
   - hosts: acng
     roles:
-      - { role: set_apt_proxy, tags: "proxy", become: yes}
+      - { role: set_apt_proxy, tags: "apt-proxy", become: yes}
       - { role: mgrote.acng, tags: "acng-server", become: yes}
