--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -17,26 +17,12 @@
   ntp_client_timezone: "Europe/Berlin" #Zeitzone in der sich der Cpmputer befindet
   ntp_client_driftfile_directory: "/var/lib/ntp" # Ordner für das driftfile
   ntp_client_servers: # welche Server sollen befragt werden
-    - address: ws-ubuntu3.grote.lan
+    - address: 11.8.43.1
+      options: iburst #optionaler parameter
+    - address: 11.8.43.2
       options: iburst #optionaler parameter
   ntp_client_daemon_user: ntp # Nutzer + Gruppe für den Dienst
   ntp_client_daemon_group: ntp # Nutzer + Gruppe für den Dienst
-  ### net-server
-  ntp_server_timezone: "Europe/Berlin" #Zeitzone in der sich der Cpmputer befindet
-  ntp_server_driftfile_directory: "/var/lib/ntp" # Ordner für das driftfile
-  ntp_server_servers: # welche Server sollen befragt werden
-    - address: ptbtime1.ptb.de
-      options: iburst #optionaler parameter
-    - address: ptbtime2.ptb.de
-      options: iburst
-    - address: ptbtime3.ptb.de
-      options: iburst
-    - address: time3.google.com
-      options: iburst
-    - address: ntp0.fau.de
-      options: iburst
-  ntp_server_daemon_user: ntp # Nutzer + Gruppe für den Dienst
-  ntp_server_daemon_group: ntp # Nutzer + Gruppe für den Dienst
   ### mgrote.set_apt_sources
   acng_server: 11.10.31.220
   acng_server_port: 9999
