--- a/ansible/roles/mgrote.acng/tasks/main.yml
+++ b/ansible/roles/mgrote.acng/tasks/main.yml
@@ -11,3 +11,11 @@
       dest: "/etc/apt-cacher-ng/acng.conf"
       mode: 0664
     notify: acng_starten_aktivieren
+
+  - name: templating security.conf
+    become: yes
+    ansible.builtin.template:
+      src: "acng.conf"
+      dest: "{{ acng_security_conf_path }}"
+      mode: 0640
+    notify: acng_starten_aktivieren
