--- a/ansible/group_vars/acng.yml
+++ b/ansible/group_vars/acng.yml
@@ -9,5 +9,8 @@
       to_port: 9999
       comment: 'acng'
   ### mgrote.acng
-  acng_server_port: 9999
-  acng_server_exthreshold: "60" #hebt Pakete 60 Tage auf
+  acng_exthreshold: "60"
+  acng_server_port: "9999"
+  acng_security_conf_path: "/etc/apt-cacher-ng/security.conf"
+  acng_server_auth_user: aadmin
+  acng_server_auth_pass: "{{ lookup('keepass', 'acng_adminauth_password', 'password') }}"
