--- a/ansible/group_vars/acng.yml
+++ b/ansible/group_vars/acng.yml
@@ -10,7 +10,7 @@
       comment: 'acng'
   ### mgrote.acng
   acng_exthreshold: "60"
-  acng_server_port: "9999"
+  acng_port: "9999"
   acng_security_conf_path: "/etc/apt-cacher-ng/security.conf"
   acng_server_auth_user: aadmin
   acng_server_auth_pass: "{{ lookup('keepass', 'acng_adminauth_password', 'password') }}"
