acng_server_auth_user --> acng_auth_user

--- a/ansible/roles/mgrote.acng/templates/security.conf
+++ b/ansible/roles/mgrote.acng/templates/security.conf
@@ -7,4 +7,4 @@
 # Basic authentication with username and password, required to
 # visit pages with administrative functionality. Format: username:password
 
-AdminAuth: {{ acng_server_auth_user }}:{{ acng_server_auth_pass }}
+AdminAuth: {{ acng_auth_user }}:{{ acng_server_auth_pass }}
