--- a/ansible/group_vars/g_acng.yml
+++ b/ansible/group_vars/g_acng.yml
@@ -14,7 +14,7 @@
   acng_exthreshold: "60"
   acng_port: "9999"
   acng_security_conf_path: "/etc/apt-cacher-ng/security.conf"
-  acng_server_auth_user: aadmin
+  acng_auth_user: aadmin
   acng_server_auth_pass: "{{ lookup('keepass', 'acng_adminauth_password', 'password') }}"
   ### set_apt_proxy
   apt_proxy_server: proxy.ausbildung.md
