--- a/ansible/group_vars/g_acng.yml
+++ b/ansible/group_vars/g_acng.yml
@@ -15,8 +15,6 @@
   acng_port: "9999"
   acng_security_conf_path: "/etc/apt-cacher-ng/security.conf"
   acng_auth_user: aadmin
-  acng_server_auth_pass: "{{ lookup('keepass', 'acng_adminauth_password', 'password') }}"
-  ### set_apt_proxy
-  apt_proxy_server: proxy.ausbildung.md
-  apt_proxy_port: 8080
-  apt_proxy_apt_conf_path: /etc/apt/apt.conf
+  acng_auth_pass: "{{ lookup('keepass', 'acng_adminauth_password', 'password') }}"
+  acng_proxy_extern_ip: "11.8.108.254"
+  acng_proxy_extern_port: "8080"
