--- a/ansible/group_vars/acng.yml
+++ b/ansible/group_vars/acng.yml
@@ -13,6 +13,6 @@
   acng_port: "9999"
   acng_security_conf_path: "/etc/apt-cacher-ng/security.conf"
   acng_auth_user: aadmin
-  acng_server_auth_pass: "{{ lookup('keepass', 'acng_adminauth_password', 'password') }}"
+  acng_auth_pass: "{{ lookup('keepass', 'acng_adminauth_password', 'password') }}"
   acng_proxy_extern_ip: "11.8.108.254"
   acng_proxy_extern_port: "8080"
