--- a/ansible/roles/set_apt_proxy/tasks/main.yml
+++ b/ansible/roles/set_apt_proxy/tasks/main.yml
@@ -11,5 +11,5 @@
     become: yes
     ansible.builtin.lineinfile:
       path: "{{ set_apt_proxy_apt_conf_path }}"
-      line: Acquire::http::proxy "http://{{ server }}:{{ port }}";
+      line: Acquire::http::proxy "http://{{ apt_proxy_server }}:{{ port }}";
       state: present
