--- a/ansible/roles/set_apt_proxy/defaults/main.yml
+++ b/ansible/roles/set_apt_proxy/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
   apt_proxy_server: 11.8.108.254
   apt_proxy_port: 8080
-  set_apt_proxy_apt_conf_path: /etc/apt/apt.conf
+  apt_proxy_apt_conf_path: /etc/apt/apt.conf
