Variablen-Namen: set_apt_proxy (#120)
* server --> apt_proxy_server

* port --> apt_proxy_port

* set_apt_proxy_apt_conf_path --> apt_proxy_apt_conf_path

* Group Vars angelegt

* Präfixe Gruppen und Hosts gesetzt

--- a/ansible/roles/set_apt_proxy/tasks/main.yml
+++ b/ansible/roles/set_apt_proxy/tasks/main.yml
@@ -2,7 +2,7 @@
   - name: ensure apt.conf exists
     become: true
     ansible.builtin.file:
-      path: "{{ set_apt_proxy_apt_conf_path }}"
+      path: "{{ apt_proxy_apt_conf_path }}"
       state: touch
       access_time: preserve
       modification_time: preserve
@@ -10,6 +10,6 @@
   - name: set proxy
     become: yes
     ansible.builtin.lineinfile:
-      path: "{{ set_apt_proxy_apt_conf_path }}"
-      line: Acquire::http::proxy "http://{{ server }}:{{ port }}";
+      path: "{{ apt_proxy_apt_conf_path }}"
+      line: Acquire::http::proxy "http://{{ apt_proxy_server }}:{{ apt_proxy_port }}";
       state: present
