set apt sources auskommentiert

--- a/ansible/playbooks/2_sources.yml
+++ b/ansible/playbooks/2_sources.yml
@@ -1,4 +1,4 @@
 ---
   - hosts: all:!acng
     roles:
-      - { role: mgrote.set_apt_sources, tags: "sources", become: yes}
+#      - { role: mgrote.set_apt_sources, tags: "sources", become: yes}
