--- a/ansible/playbooks/3_haertung.yml
+++ b/ansible/playbooks/3_haertung.yml
@@ -1,5 +1,5 @@
 ---
-  - hosts: all
+  - hosts: g_ubuntu
     roles:
       - { role: oefenweb.ufw, # Regeln werden in den Group/Host-Vars gesetzt
           tags: "ufw",
