--- a/ansible/playbooks/install_dnsmasq.yml
+++ b/ansible/playbooks/install_dnsmasq.yml
@@ -1,4 +1,4 @@
 ---
-  - hosts: dhcp
+  - hosts: g_dnsmasq
     roles:
-      - dhcp_server_einrichten
+      - { role: mgrote.dnsmasq, tags: "dnsmasq", become: true}
