--- a/ansible/group_vars/g_dnsmasq.yml
+++ b/ansible/group_vars/g_dnsmasq.yml
@@ -36,13 +36,13 @@
       ip: 11.10.31.221
     - shortname: GATEWAY
       ip: 11.10.31.254
-    - shortname: RMPHLPVE1 #data/links
+    - shortname: RMPHLPVE1L #data/links
       ip: 11.10.31.11
-    - shortname: RMPHLPVE2 #data/links
+    - shortname: RMPHLPVE2L #data/links
       ip: 11.10.31.12
-    - shortname: RMPHLPVE1 #corosync/rechts
+    - shortname: RMPHLPVE1R #corosync/rechts
       ip: 11.10.31.13
-    - shortname: RMPHLPVE2 #corosync/rechts
+    - shortname: RMPHLPVE2R #corosync/rechts
       ip: 11.10.31.14
     - shortname: RMPHLPVE1-IPMI #MGMT-Port
       ip: 11.10.31.6
