--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -24,7 +24,7 @@
   ntp_client_daemon_user: ntp # Nutzer + Gruppe für den Dienst
   ntp_client_daemon_group: ntp # Nutzer + Gruppe für den Dienst
   ### mgrote.set_apt_sources
-  acng_server: 11.10.31.220
+  acng_server: acng.ausbildung.md
   acng_server_port: 9999
   ### robertdebock.bootstrap
   users:
