--- a/ansible/group_vars/g_dnsmasq.yml
+++ b/ansible/group_vars/g_dnsmasq.yml
@@ -15,9 +15,9 @@
   dnsmasq_domain: ausbildung.md # wie heißt die lokale domain
   dnsmasq_dhcp_pools: # welche dhcp pools gibt es
     - name: pool1
-      ip_start: 11.10.31.220
-      ip_end: 11.10.31.230
-      leasetime: "3m"
+      ip_start: 11.10.31.51
+      ip_end: 11.10.31.200
+      leasetime: "120m"
   dnsmasq_dhcp_static_leases: # statische leases; also max 11:22:33:44:55:66 kriegt immer IP 192.168.0.60 mit dem hostnamen klauspeter
     - name: "klauspeter" # gleichzeitg auch hostname
       mac: "11:22:33:44:55:66"
@@ -36,13 +36,13 @@
       ip: 11.10.31.221
     - shortname: GATEWAY
       ip: 11.10.31.254
-    - shortname: RMPHLPVE1 #data/links
+    - shortname: RMPHLPVE1L #data/links
       ip: 11.10.31.11
-    - shortname: RMPHLPVE2 #data/links
+    - shortname: RMPHLPVE2L #data/links
       ip: 11.10.31.12
-    - shortname: RMPHLPVE1 #corosync/rechts
+    - shortname: RMPHLPVE1R #corosync/rechts
       ip: 11.10.31.13
-    - shortname: RMPHLPVE2 #corosync/rechts
+    - shortname: RMPHLPVE2R #corosync/rechts
       ip: 11.10.31.14
     - shortname: RMPHLPVE1-IPMI #MGMT-Port
       ip: 11.10.31.6
