--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -22,8 +22,8 @@
       g_acng:
         hosts:
           BLACNG001:
-#      g_jenkins:
-#        hosts:
-#          BLJENK001:
+      g_jenkins:
+        hosts:
+          BLJENK001:
       g_database:
         hosts:
