--- a/ansible/playbooks/base/2_packages.yml
+++ b/ansible/playbooks/base/2_packages.yml
@@ -1,5 +1,6 @@
 ---
   - hosts: all
+    serial: 3
     roles:
       - { role: mgrote.update_packages, tags: "update", become: yes}
-      - { role: mgrote.install_packages, tags: "install", become: yes}
+      - { role: mgrote.apt_install_packages, tags: "install"}
